Expand dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -4,4 +4,52 @@ license = Perl_5
 copyright_holder = Leon Timmermans
 copyright_year   = 2012
 
-[@LEONT::PP]
+[Git::GatherDir]
+[PruneCruft]
+[MetaYAML]
+[License]
+[Manifest]
+[Readme]
+
+[AutoPrereqs]
+skip = File::ShareDir
+skip = Foo::Bar
+[MetaJSON]
+[GitHub::Meta]
+[Git::NextVersion]
+[MetaProvides::Package]
+
+[ExecDir]
+dir = script
+[MakeMaker]
+[StaticInstall]
+mode = on
+
+[Test::Compile]
+[PodSyntaxTests]
+
+[InstallGuide]
+[PodWeaver]
+[PkgVersion]
+[NextRelease]
+
+[CheckChangesHasContent]
+[Git::Check]
+[RunExtraTests]
+[TestRelease]
+[ConfirmRelease]
+
+[MinimumPerl]
+
+[UploadToCPAN]
+
+[Git::Commit]
+[Git::Tag]
+[Git::Push]
+
+[OnlyCorePrereqs]
+:version = 0.012
+check_dual_life_versions = 0
+skip = ExtUtils::Config
+skip = ExtUtils::Helpers
+skip = ExtUtils::InstallPaths
