Use custom Build.PL

--- a/dist.ini
+++ b/dist.ini
@@ -21,9 +21,9 @@ skip = Foo::Bar
 
 [ExecDir]
 dir = script
-[MakeMaker]
-[StaticInstall]
-mode = on
+[BuildSelf]
+add_buildpl = 0
+[MetaMergeFile]
 
 [Test::Compile]
 [PodSyntaxTests]
